Fixed CORS + DTOs